--- a/pages/invoices/delete(admin).phtml
+++ b/pages/invoices/delete(admin).phtml
@@ -1,10 +1,10 @@
 <div class="page-header">
-  <h1>Delete product</h1>
+  <h1>Delete invoice</h1>
 </div>
 <?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
     <p>Are you sure?</p>
 	<button class="btn btn-danger pull-right" type="submit">Yes</button>
-	<a class="btn btn-primary" href="products/edit/<?php e($id); ?>">No</a>
+	<a class="btn btn-primary" href="invoices/view/<?php e($id); ?>">No</a>
 	<?php Session::getCsrfInput(); ?>
 </form>
