--- a/pages/invoices/view(admin).phtml
+++ b/pages/invoices/view(admin).phtml
@@ -108,9 +108,10 @@
 <p>
 	<?php if (!$data['invoices']['sent']) {?>
 		<a class="btn btn-primary pull-right" href="invoices/send/<?php e($id);?>">Send</a>
+		<a class="btn btn-default pull-right" href="invoices/delete/<?php e($id);?>">Delete</a>
 	<?php } ?>
 	<a class="btn btn-<?php $data['invoices']['sent'] ? e('primary') : e('default');?>" href="invoices/download/<?php e($id);?>">Download</a>
-	<a class="btn btn-default" href="invoices/edit/<?php e($id);?>">Edit</a>
+	<a class="btn btn-default <?php if ($data['invoices']['sent']) {?>pull-right<?php } ?>" href="invoices/edit/<?php e($id);?>">Edit</a>
 	<?php if ($data['invoices']['sent'] && (!$data['invoices']['paid'] || $data['invoices']['reminder1'] || $data['invoices']['reminder2'])) {?>
 		<a class="btn btn-default" href="invoices/download/<?php e($id);?>/1">Download 1st Reminder</a>
 		<?php if (!$data['invoices']['reminder1']) {?>
