--- a/pages/hours/index(admin).phtml
+++ b/pages/hours/index(admin).phtml
@@ -10,7 +10,7 @@
       <th class="date <?php if($order=='date') e('selected'); ?>" order="/hours/date/desc">Date</th>
       <th class="number <?php if($order=='hours_worked') e('selected'); ?>" order="/hours/hours_worked/desc">Hours</th>
       <th class="name <?php if($order=='name') e('selected'); ?>" order="/hours/name/asc">Name</th>
-      <th class="text <?php if($order=='customer_id') e('selected'); ?>" order="/hours/customer_id/asc">Customer</th>
+      <th class="text <?php if($order=='customer') e('selected'); ?>" order="/hours/customer/asc">Customer</th>
       <th class="money <?php if($order=='subtotal') e('selected'); ?>" order="/hours/subtotal/desc">Subtotal</th>
     </tr>
   </thead>
