--- a/pages/invoices/index(admin).phtml
+++ b/pages/invoices/index(admin).phtml
@@ -8,7 +8,7 @@
       <th class="name <?php if($order=='name') e('selected'); ?>" order="/invoices/name/asc">Name</th>
       <th class="bool <?php if($order=='paid' || $order=='paid') e('selected'); ?>" order="/invoices/paid/asc">Paid</th>
       <th class="date <?php if($order=='date') e('selected'); ?>" order="/invoices/date/desc">Date</th>
-      <th class="<?php if($order=='customer_id') e('selected'); ?>" order="/invoices/customer_id/asc">Customer</th>
+      <th class="<?php if($order=='customer') e('selected'); ?>" order="/invoices/customer/asc">Customer</th>
       <th class="money">Subtotal</th>
     </tr>
   </thead>
