--- a/pages/deliveries/index(admin).phtml
+++ b/pages/deliveries/index(admin).phtml
@@ -9,7 +9,7 @@
     <tr>
       <th class="date <?php if($order=='date') e('selected'); ?>" order="/deliveries/date/desc">Date</th>
       <th class="name <?php if($order=='name') e('selected'); ?>" order="/deliveries/name/asc">Name</th>
-      <th class="text <?php if($order=='customer_id') e('selected'); ?>" order="/deliveries/customer_id/asc">Customer</th>
+      <th class="text <?php if($order=='customer') e('selected'); ?>" order="/deliveries/customer/asc">Customer</th>
       <th class="money <?php if($order=='subtotal') e('selected'); ?>" order="/deliveries/subtotal/desc">Subtotal</th>
     </tr>
   </thead>
