--- a/pages/settings/general/view(admin).phtml
+++ b/pages/settings/general/view(admin).phtml
@@ -16,6 +16,18 @@
             </dd>
         </dl>
         <dl>
+            <dt>Default VAT percentage</dt>
+            <dd>        
+                <?php e($data['tenants']['default_vat_percentage']); ?>
+            </dd>
+        </dl>
+        <dl>
+            <dt>Default hourly fee</dt>
+            <dd>        
+                <?php e($data['tenants']['default_hourly_fee']); ?>
+            </dd>
+        </dl>
+        <dl>
             <dt>Integrity</dt>
             <dd><a href="settings/general/check">check</a></dd>
         </dl>
