--- a/pages/settings/general/edit(admin).phtml
+++ b/pages/settings/general/edit(admin).phtml
@@ -17,6 +17,18 @@
 		<span class="help-block"><?php if (isset($errors['tenants[subscriptions_active]'])) e($errors['tenants[subscriptions_active]']); ?></span>
 		</div>
 
+		<div class="form-group <?php e(isset($errors['tenants[default_vat_percentage]'])?'has-error':''); ?>">
+			<label class="control-label" for="tenants[default_vat_percentage]">Default VAT percentage</label>
+			<input class="form-control" name="tenants[default_vat_percentage]" type="number" value="<?php e($data['tenants']['default_vat_percentage']); ?>" id="tenants[default_vat_percentage]" step="0.01" />
+			<span class="help-block"><?php if (isset($errors['tenants[default_vat_percentage]'])) e($errors['tenants[default_vat_percentage]']); ?></span>
+		</div>
+
+		<div class="form-group <?php e(isset($errors['tenants[default_hourly_fee]'])?'has-error':''); ?>">
+		<label class="control-label" for="tenants[default_hourly_fee]">Default hourly fee</label>
+		<input class="form-control" name="tenants[default_hourly_fee]" type="number" value="<?php e($data['tenants']['default_hourly_fee']); ?>" id="tenants[default_hourly_fee]" step="0.01" />
+		<span class="help-block"><?php if (isset($errors['tenants[default_hourly_fee]'])) e($errors['tenants[default_hourly_fee]']); ?></span>
+		</div>
+
     <div class="form-group">
 		<button class="btn btn-primary" type="submit">Save</button>
 	</div>
