--- a/pages/subscriptiontypes/index(admin).phtml
+++ b/pages/subscriptiontypes/index(admin).phtml
@@ -17,4 +17,4 @@
   </tbody>
 </table>
 
-<p><a class="btn-primary" href="subscriptiontypes/add">Add abonnementtype</a></p>
+<p><a class="btn-primary" href="subscriptiontypes/add">Add subscription type</a></p>
