--- a/pages/subscriptiontypes/add(admin).phtml
+++ b/pages/subscriptiontypes/add(admin).phtml
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>New abonnementtype</h1>
+  <h1>New subscription type</h1>
 </div>
 <?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
