--- a/pages/customers/view(admin).phtml
+++ b/pages/customers/view(admin).phtml
@@ -20,8 +20,8 @@
  
   	</dl>
 	<dl>
-		<dt>VAT</dt>
-  		<dd><?php if($data['customers']['vat_reverse_charge']) e('no'); else e('yes'); ?></dd>
+		<dt>tax</dt>
+  		<dd><?php if($data['customers']['tax_reverse_charge']) e('no'); else e('yes'); ?></dd>
  
   	</dl>
 </div>
