--- a/pages/deliveries/view(admin).phtml
+++ b/pages/deliveries/view(admin).phtml
@@ -35,8 +35,8 @@
   </dl>
 
 	<dl>
-		<dt>VAT percentage</dt>
-  	<dd><?php $data['deliveries']['vat_percentage'] ? e($data['deliveries']['vat_percentage']) : e('-'); ?></dd>
+		<dt>tax percentage</dt>
+  	<dd><?php $data['deliveries']['tax_percentage'] ? e($data['deliveries']['tax_percentage']) : e('-'); ?></dd>
   </dl>
 	
 	<?php if($data['deliveries']['comment']) { ?>
