--- a/pages/hours/view(admin).phtml
+++ b/pages/hours/view(admin).phtml
@@ -40,8 +40,8 @@
   </dl>
 
 	<dl>
-		<dt>VAT percentage</dt>
-  	<dd><?php $data['hours']['vat_percentage'] ? e($data['hours']['vat_percentage']) : e('-'); ?></dd>
+		<dt>tax percentage</dt>
+  	<dd><?php $data['hours']['tax_percentage'] ? e($data['hours']['tax_percentage']) : e('-'); ?></dd>
   </dl>
 	
 	<dl>
