--- a/pages/settings/general/view(admin).phtml
+++ b/pages/settings/general/view(admin).phtml
@@ -16,9 +16,9 @@
             </dd>
         </dl>
         <dl>
-            <dt>Default VAT percentage</dt>
+            <dt>Default tax percentage</dt>
             <dd>        
-                <?php e($data['tenants']['default_vat_percentage']); ?>
+                <?php e($data['tenants']['default_tax_percentage']); ?>
             </dd>
         </dl>
         <dl>
