--- a/pages/subscriptions/view(admin).phtml
+++ b/pages/subscriptions/view(admin).phtml
@@ -31,8 +31,8 @@
   </dl>
 
 	<dl>
-		<dt>VAT percentage</dt>
- 		<dd><?php if(isset($data['subscriptions']['vat_percentage'])) e($data['subscriptions']['vat_percentage']); else e('VAT reverse charge'); ?></dd>
+		<dt>tax percentage</dt>
+ 		<dd><?php if(isset($data['subscriptions']['tax_percentage'])) e($data['subscriptions']['tax_percentage']); else e('tax reverse charge'); ?></dd>
   </dl>
 
 	<dl>
