--- a/pages/hours/edit(admin).phtml
+++ b/pages/hours/edit(admin).phtml
@@ -49,10 +49,10 @@
 		<span class="help-block"><?php if (isset($errors['hours[hourly_fee]'])) e($errors['hours[hourly_fee]']); ?></span>
 	</div>
 
-	<div class="form-group <?php e(isset($errors['hours[vat_percentage]'])?'has-error':''); ?>">
-		<label class="control-label" for="hours[vat_percentage]">VAT percentage</label>
-		<input class="form-control" name="hours[vat_percentage]" type="number" step="0.01" value="<?php e($data['hours']['vat_percentage']); ?>" id="hours[vat_percentage]" />
-		<span class="help-block"><?php if (isset($errors['hours[vat_percentage]'])) e($errors['hours[vat_percentage]']); ?></span>
+	<div class="form-group <?php e(isset($errors['hours[tax_percentage]'])?'has-error':''); ?>">
+		<label class="control-label" for="hours[tax_percentage]">tax percentage</label>
+		<input class="form-control" name="hours[tax_percentage]" type="number" step="0.01" value="<?php e($data['hours']['tax_percentage']); ?>" id="hours[tax_percentage]" />
+		<span class="help-block"><?php if (isset($errors['hours[tax_percentage]'])) e($errors['hours[tax_percentage]']); ?></span>
 	</div>
 
 	<div class="form-group <?php e(isset($errors['hours[name]'])?'has-error':''); ?>">
