--- a/pages/settings/company/view(admin).phtml
+++ b/pages/settings/company/view(admin).phtml
@@ -48,8 +48,8 @@
         <dd><?php e($data['tenants']['coc_number']?:'-');?></dd>
     </dl>
     <dl>
-        <dt>VAT number</dt>
-        <dd><?php e($data['tenants']['vat_number']?:'-');?></dd>
+        <dt>tax number</dt>
+        <dd><?php e($data['tenants']['tax_number']?:'-');?></dd>
     </dl>
 </div>
 
