--- a/pages/settings/general/edit(admin).phtml
+++ b/pages/settings/general/edit(admin).phtml
@@ -17,10 +17,10 @@
 		<span class="help-block"><?php if (isset($errors['tenants[subscriptions_active]'])) e($errors['tenants[subscriptions_active]']); ?></span>
 		</div>
 
-		<div class="form-group <?php e(isset($errors['tenants[default_vat_percentage]'])?'has-error':''); ?>">
-			<label class="control-label" for="tenants[default_vat_percentage]">Default VAT percentage</label>
-			<input class="form-control" name="tenants[default_vat_percentage]" type="number" value="<?php e($data['tenants']['default_vat_percentage']); ?>" id="tenants[default_vat_percentage]" step="0.01" />
-			<span class="help-block"><?php if (isset($errors['tenants[default_vat_percentage]'])) e($errors['tenants[default_vat_percentage]']); ?></span>
+		<div class="form-group <?php e(isset($errors['tenants[default_tax_percentage]'])?'has-error':''); ?>">
+			<label class="control-label" for="tenants[default_tax_percentage]">Default tax percentage</label>
+			<input class="form-control" name="tenants[default_tax_percentage]" type="number" value="<?php e($data['tenants']['default_tax_percentage']); ?>" id="tenants[default_tax_percentage]" step="0.01" />
+			<span class="help-block"><?php if (isset($errors['tenants[default_tax_percentage]'])) e($errors['tenants[default_tax_percentage]']); ?></span>
 		</div>
 
 		<div class="form-group <?php e(isset($errors['tenants[default_hourly_fee]'])?'has-error':''); ?>">
