--- a/pages/subscriptions/add(admin).phtml
+++ b/pages/subscriptions/add(admin).phtml
@@ -44,10 +44,10 @@
 		<span class="help-block"><?php if (isset($errors['subscriptions[fee]'])) e($errors['subscriptions[fee]']); ?></span>
 	</div>
   
-	<div class="form-group <?php e(isset($errors['subscriptions[vat_percentage]'])?'has-error':''); ?>">
-		<label class="control-label" for="subscriptions[vat_percentage]">VAT percentage</label>
-		<input class="form-control" name="subscriptions[vat_percentage]" type="number" step="0.01" value="<?php e($data['subscriptions']['vat_percentage']); ?>" id="subscriptions[vat_percentage]" />
-		<span class="help-block"><?php if (isset($errors['subscriptions[vat_percentage]'])) e($errors['subscriptions[vat_percentage]']); ?></span>
+	<div class="form-group <?php e(isset($errors['subscriptions[tax_percentage]'])?'has-error':''); ?>">
+		<label class="control-label" for="subscriptions[tax_percentage]">tax percentage</label>
+		<input class="form-control" name="subscriptions[tax_percentage]" type="number" step="0.01" value="<?php e($data['subscriptions']['tax_percentage']); ?>" id="subscriptions[tax_percentage]" />
+		<span class="help-block"><?php if (isset($errors['subscriptions[tax_percentage]'])) e($errors['subscriptions[tax_percentage]']); ?></span>
 	</div>
 
 	<div class="form-group <?php e(isset($errors['subscriptions[months]'])?'has-error':''); ?>">
