--- a/pages/invoices/view(admin).phtml
+++ b/pages/invoices/view(admin).phtml
@@ -89,7 +89,7 @@
   		<dd><?php e($data['invoices']['subtotal']);?></dd>
    	</dl>
 	<dl>
-		<dt>tax</dt>
+		<dt>Tax</dt>
   		<dd><?php if ($data['invoices']['tax'] !== null) {
     e($data['invoices']['tax']);
 } else {
