--- a/pages/customers/view(admin).phtml
+++ b/pages/customers/view(admin).phtml
@@ -20,7 +20,7 @@
  
   	</dl>
 	<dl>
-		<dt>tax</dt>
+		<dt>Tax</dt>
   		<dd><?php if($data['customers']['tax_reverse_charge']) e('no'); else e('yes'); ?></dd>
  
   	</dl>
