--- a/pages/index(admin).phtml
+++ b/pages/index(admin).phtml
@@ -40,7 +40,7 @@
                 <?php if(isset($unsent_reminders2)) {
                     foreach ($unsent_reminders2 as $row): ?>
                     <tr class="hover" onclick="window.location.href='invoices/view/<?php e($row['invoices']['id']);?>';" title="Needs second reminder">
-                        <td class="name"><span><a class="dot text warning">remind</a><span class="tag">remind</span> <?php e($row['invoices']['number']); ?> - <?php e($row['invoices']['name']); ?></span></td>
+                        <td class="name"><span><a class="dot text warning">remind</a><?php e($row['invoices']['number']); ?> - <?php e($row['invoices']['name']); ?></span></td>
                         <td class="money"><span><?php e($row['invoices']['subtotal']); ?></span></td>
                     </tr>
                 <?php endforeach; 
