--- a/pages/customers/index(admin).phtml
+++ b/pages/customers/index(admin).phtml
@@ -7,7 +7,7 @@
       <th class="name <?php if($order=='name') e('selected'); ?>" order="/customers/name/asc">Name</th>
       <th class="<?php if($order=='email') e('selected'); ?>" order="/customers/email/asc">Email address</th>
       <th class="<?php if($order=='contact') e('selected'); ?>" order="/customers/contact/asc">Contact</th>
-      <th class="bool <?php if($order=='tax_reverse_charge') e('selected'); ?>" order="/customers/tax_reverse_charge/asc">tax</th>
+      <th class="bool <?php if($order=='tax_reverse_charge') e('selected'); ?>" order="/customers/tax_reverse_charge/asc">Tax</th>
     </tr>
   </thead>
   <tbody>
