--- a/pages/customers/edit(admin).phtml
+++ b/pages/customers/edit(admin).phtml
@@ -33,7 +33,7 @@
 		<label class="control-label" for="customers[language_id]">Invoice language</label>
 		<select class="form-control" name="customers[language_id]" id="customers[language_id]">
 		<?php foreach ($languages as $languageId=>$languageName): ?>
-			<option value="<?php e($languageId); ?>"><?php e($languageName); ?></option>
+			<option value="<?php e($languageId); ?>" <?php if($data['customers']['language_id'] == $languageId) e('selected'); ?>><?php e($languageName); ?></option>
 		<?php endforeach; ?>
 		</select>
 		<span class="help-block"><?php if (isset($errors['customers[language_id]'])) e($errors['customers[language_id]']); ?></span>
