--- a/pages/settings/index(admin).phtml
+++ b/pages/settings/index(admin).phtml
@@ -1,4 +1,4 @@
-<?php Buffer::set('title','Settings'); ?>
+<?php Buffer::set('title', 'Settings');?>
 <h3>Home</h3>
 <h1>Settings</h1>
 
@@ -10,4 +10,9 @@
     <li><a href="/settings/general/view">General Settings</a></li>
     <li><a href="/settings/company/view">Company Settings</a></li>
     <li><a href="/settings/invoice/view">Invoice Settings</a></li>
+    <ul>
+		<?php foreach ($languages as $language): ?>
+            <li><a href="/settings/languages/view/<?php e($language['languages']['id']);?>">Language Settings (<?php e(strtoupper($language['languages']['code']));?>)</a></li>
+		<?php endforeach;?>
+    </ul>
 </ul>
