--- a/pages/settings/general/view(admin).phtml
+++ b/pages/settings/general/view(admin).phtml
@@ -1,6 +1,10 @@
 <?php Buffer::set('title','Settings'); ?>
-<h3>Home / <a href="/settings/">Settings</a></h3>
+<h3><a href="/">Home</a> / Settings</h3>
 <h1>General settings</h1>
+
+<?php include('pages/settings/settingstabs.php'); ?>
+
+<p class="lead">Below you will find your preferences. You can set here if you want to enable time tracking (hours) and subscriptions, and you can customize (the data on) your invoices.</p>
 
 <div>
         <dl>
