--- a/web/css/default.css
+++ b/web/css/default.css
@@ -319,6 +319,12 @@ body.iOS .icons {
 }
 
 
+/* tabs */
+ul.tabs {display: block; overflow: auto; margin: 0 0 30px!important; padding: 0!important; position: relative;}
+ul.tabs::after {content: ""; width: 100%; position: absolute; height: 1px; background: #ccc; left: 0; bottom: 0; z-index: -1;}
+ul.tabs li {float: left; list-style: none; margin: 0; padding: 0;}
+ul.tabs li a {display: block; padding: 6px 12px; border-radius: 3px 3px 0 0; border: 1px solid transparent; border-bottom: 1px solid #ccc;}
+ul.tabs li.active a {border: 1px solid #ccc; border-bottom: 1px solid white;}
 
 
 
