--- a/pages/settings/invoice/view(admin).phtml
+++ b/pages/settings/invoice/view(admin).phtml
@@ -2,6 +2,8 @@
 <h3>Home / <a href="/settings/">Settings</a></h3>
 <h1>Invoice settings</h1>
 
+<?php include('pages/settings/settingstabs.php'); ?>
+
 <div>
 
     <dl>
