--- a/pages/settings/company/view(admin).phtml
+++ b/pages/settings/company/view(admin).phtml
@@ -2,6 +2,8 @@
 <h3>Home / <a href="/settings/">Settings</a></h3>
 <h1>Company settings</h1>
 
+<?php include('pages/settings/settingstabs.php'); ?>
+
 <div>
     <dl>
         <dt>Company name</dt>
