--- a/pages/settings/invoice/edit(admin).phtml
+++ b/pages/settings/invoice/edit(admin).phtml
@@ -1,6 +1,6 @@
 <?php Buffer::set('title','Settings'); ?>
-<h3><a href="/">Home</a></h3>
-<h1>Edit settings</h1>
+<h3><a href="/">Home</a> / <a href="/settings/">Settings</a></h3>
+<h1>Edit invoice settings</h1>
 
 <?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
