--- a/pages/settings/invoice/view(admin).phtml
+++ b/pages/settings/invoice/view(admin).phtml
@@ -1,5 +1,5 @@
 <?php Buffer::set('title', 'Settings');?>
-<h3>Home / <a href="/settings/">Settings</a></h3>
+<h3><a href="/">Home</a> / <a href="/settings/">Settings</a></h3>
 <h1>Invoice settings</h1>
 
 <?php include('pages/settings/settingstabs.php'); ?>
@@ -26,7 +26,15 @@
         <dt>Signature (<a href="settings/invoice/change/signature_image/5.5">change</a>)</dt>
         <dd><div style="height: 3.5em; width: 50%; background: url('data:image/png;base64,<?php e(base64_encode($data['tenants']['signature_image']));?>') left center / contain no-repeat;"></div></dd>
     </dl>
-
+    <dl>
+        <dt>Languages</dt>
+        <dd><ul>
+            <?php foreach ($languages as $language): ?>
+                <li><a href="/settings/languages/view/<?php e($language['languages']['id']);?>"><?php e($language['languages']['name']);?> (<?php e(strtoupper($language['languages']['code']));?>)</a></li>
+            <?php endforeach;?>
+            </ul>
+        </dd>
+    </dl>
 
 </div>
 
