--- a/pages/settings/languages/view(admin).phtml
+++ b/pages/settings/languages/view(admin).phtml
@@ -1,6 +1,6 @@
 <?php Buffer::set('title', 'Settings');?>
 <h3>Home / <a href="/settings/">Settings</a></h3>
-<h1>Language settings (<?php e(strtoupper($language['languages']['code']));?>)</h1>
+<h1>Invoice settings (<?php e(strtoupper($language['languages']['code']));?>)</h1>
 
 <div>
 
