--- a/web/css/default.css
+++ b/web/css/default.css
@@ -325,7 +325,9 @@ ul.tabs::after {content: ""; width: 100%; position: absolute; height: 1px; backg
 ul.tabs li {float: left; list-style: none; margin: 0; padding: 0;}
 ul.tabs li a {display: block; padding: 6px 12px; border-radius: 3px 3px 0 0; border: 1px solid transparent; border-bottom: 1px solid #ccc;}
 ul.tabs li.active a {border: 1px solid #ccc; border-bottom: 1px solid white;}
-
+@media (max-width: 800px) {
+    ul.tabs li a span {display: none;}
+}
 
 
 /* set colors */
