--- a/pages/auth/login(default).phtml
+++ b/pages/auth/login(default).phtml
@@ -9,7 +9,7 @@
 		<span class="help-block"><?php if (isset($errors['username'])) e($errors['username']); ?></span>
 	</div>
     <div class="form-group <?php e(isset($errors['password'])?'has-error':''); ?>">
-		<label class="control-label" for="password">Password</label>
+		<label class="control-label" for="password">Password <a href="auth/forgotten">forgotten?</a></label>
 		<input class="form-control" name="password" type="password" value="<?php e($data['password']); ?>" id="password" />
 		<span class="help-block"><?php if (isset($errors['password'])) e($errors['password']); ?></span>
 	</div>
