--- a/pages/projects/edit(admin).phtml
+++ b/pages/projects/edit(admin).phtml
@@ -22,6 +22,12 @@
 		<span class="help-block"><?php if (isset($errors['projects[customer_id]'])) e($errors['projects[customer_id]']); ?></span>
 	</div>
   
+	<div class="form-group <?php e(isset($errors['projects[default_hourly_fee]'])?'has-error':''); ?>">
+		<label class="control-label" for="projects[default_hourly_fee]">Default hourly fee</label>
+		<input class="form-control" name="projects[default_hourly_fee]" type="number" step="0.01" value="<?php e($data['projects']['default_hourly_fee']); ?>" id="projects[default_hourly_fee]" />
+		<span class="help-block"><?php if (isset($errors['projects[default_hourly_fee]'])) e($errors['projects[default_hourly_fee]']); ?></span>
+	</div>
+
 	<div class="form-group <?php e(isset($errors['projects[active]'])?'has-error':''); ?>">
 		<label class="control-label" for="projects[active]">Active</label>
 		<input class="form-control" name="projects[active]" type="checkbox" id="projects[active]" value="1" <?php if($data['projects']['active']) e('checked'); ?> />
