--- a/pages/projects/view(admin).phtml
+++ b/pages/projects/view(admin).phtml
@@ -10,6 +10,11 @@
  
   	</dl>
 	<dl>
+		<dt>Default hourly fee</dt>
+  		<dd><?php e($customers[$data['projects']['default_hourly_fee']]);?></dd>
+ 
+  	</dl>
+	<dl>
 		<dt>Active</dt>
   		<dd><?php $data['projects']['active'] ? e('yes') : e('no');?></dd>
  
