--- a/pages/projects/view(admin).phtml
+++ b/pages/projects/view(admin).phtml
@@ -11,7 +11,7 @@
   	</dl>
 	<dl>
 		<dt>Default hourly fee</dt>
-  		<dd><?php e($customers[$data['projects']['default_hourly_fee']]);?></dd>
+  		<dd><?php e($data['projects']['default_hourly_fee']);?></dd>
  
   	</dl>
 	<dl>
