--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -1,8 +1,8 @@
 <?php Buffer::set('title','Statistics'); ?>
 <h3>Home</h3>
-<h1>Statistics</h1>
+<h1>Statistics of <?php e($year); ?> <a href="statistics/<?php e($year-1); ?>" class="down"></a><a href="statistics/<?php if($year < date('Y')) e($year+1); else e($year); ?>" class="up <?php if(($year+1) > date('Y')) e('inactive'); ?>"></a></h1>
 
-<p>You currently receive &euro; <?php e(round($subscriptionIncome)); ?> per month from <a href="/subscriptions">subscriptions</a>.<br />The <?php e(date('Y')); ?> total of <a href="/invoices">invoices</a> is <?php e(round($incomeThisYear/1000,1)); ?>k euro and you have <?php e(round($incomeThisYearAddon/1000,1)); ?>k euro of uninvoiced work. This creates a total of <?php e(round(($incomeThisYear + $incomeThisYearAddon)/1000,1)); ?>k euro. Last year you received <?php e(round($incomeLastYear/1000,1)); ?>k euro.<p>
+<p class="lead">You receive &euro; <?php e(round($subscriptionIncome)); ?> per month from <a href="/subscriptions">subscriptions</a>.<br />The <?php e(date('Y')); ?> total of <a href="/invoices">invoices</a> is <?php e(round($incomeThisYear/1000,1)); ?>k euro<?php if($incomeThisYearAddon) {?> and you have <?php e(round($incomeThisYearAddon/1000,1)); ?>k euro of uninvoiced work. This creates a total of <?php e(round(($incomeThisYear + $incomeThisYearAddon)/1000,1)); ?>k euro<?php } ?>. Last year you received <?php e(round($incomeLastYear/1000,1)); ?>k euro.<p>
 
 <br />
 <div>
