--- a/web/css/default.css
+++ b/web/css/default.css
@@ -330,11 +330,30 @@ ul.tabs li.active a {border: 1px solid #ccc; border-bottom: 1px solid white;}
 }
 
 
+h1 .down, h1 .up {position: absolute; margin-left: 10px;}
+h1 .down {margin-top: 32px;
+    width: 0; 
+    height: 0; 
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 25px solid #000;
+}
+h1 .up {margin-top: 2px;
+    width: 0; 
+    height: 0; 
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 25px solid black;
+}
+h1 .up.inactive {opacity: 0.25;}
+
+
 /* set colors */
 body {color: #545454;}
 .default .content::before {background: #121619;;}
 th, .main > div h3, .main > div h3 a, dt, .main > div dt a {font-style: normal; color: #aaa; font-weight: normal;}
 h1, h2 {color: #000000; font-weight: 600;}
+h1 a {color: black!important;}
 input, select, textarea {color: #000000;}
 .main > div h3, .main > div h3 a {color: #5b4f96;}
 h1:after {background: transparent;}
