--- a/web/css/default.css
+++ b/web/css/default.css
@@ -95,6 +95,10 @@ h3 {
         margin-right: 5px;
         margin-bottom: 9px;
     }
+    h1 {font-size: 48px;}
+    h2 {font-size: 28px;}
+    h1 + p {margin-top: -15px;}
+    .content > h1 + p + br {display: none;}
 }
 
 
