--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -61,7 +61,7 @@ $graph_height = 100;
     ?>
        "/>
 </svg>
-<div><span style="float: right;">&rarr; <?php e($year); ?></span></div>
+<div><span style="float: right;">dec <?php e($year); ?></span></div>
 <ul class="legend">
     <li><div class="square purple"></div> invoiced <span>(<?php e(round($totalinvoiced/1000,1)); ?>k)</span></li>
     <li><div class="square lightpurple"></div> subscriptions <span>(<?php e(round($totalsubscriptions/1000,1)); ?>k)</span></li>
