--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -13,7 +13,7 @@ $graph_height = 100;
   <polyline
      id="totalincome_graph"
      fill="#5b4f96"
-     stroke="#5b4f96"
+     stroke="none"
      stroke-width="0.5"
      points="0,<?php e($graph_height);?>
     <?php 
@@ -30,7 +30,7 @@ $graph_height = 100;
   <polyline
      id="subscriptionincome_graph"
      fill="#928AB9"
-     stroke="#928AB9"
+     stroke="none"
      stroke-width="0.5"
      points="0,<?php e($graph_height);?>
     <?php 
