--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -9,7 +9,7 @@
 $graph_width = 300;
 $graph_height = 100;
 ?>
-<svg viewBox="0 0 <?php e($graph_width);?> <?php e($graph_height);?>" class="chart" style="border-left: 1px solid #545454; border-bottom: 1px solid #545454;">
+<svg viewBox="0 0 <?php e($graph_width);?> <?php e($graph_height);?>" class="chart" style="border-left: 1px solid #aaa; border-bottom: 1px solid #aaa;">
   <polyline
      id="totalincome_graph"
      fill="#5b4f96"
