--- a/web/css/default.css
+++ b/web/css/default.css
@@ -222,7 +222,7 @@ div + p {padding-top: 15px;}
 
 /* form */
 .form-group, dd {max-width: 500px;}
-.form-group.large {max-width: 100%; position: relative;}
+.form-group.large {max-width: calc(100% - 22px); position: relative;}
 .form-group.large textarea {max-width: 100%; min-width: 100%;}
 .form input {margin-bottom: 1em;}
 input, select, textarea {height: 40px; padding: 0 10px; line-height: 40px; background: none; border: 1px solid #ccc; width: calc(100% - 22px); font-size: 16px; font-family: 'Roboto', sans-serif;}
